force-app/main/default/objects/Payment_of_wages__c/Payment_of_wages__c.object-meta.xml
<CustomObject>
    <description>Object to collect payment of wages information from online wage claim submissions</description>
    <label>Payment of wages</label>
    <nameField>
        <displayFormat>POW-{0000000}</displayFormat>
        <label>Payment of wages</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment of wages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>