force-app/main/default/objects/Payment_of_wages__c/fields/For_activity__c.field-meta.xml
<CustomField>
    <fullName>For_activity__c</fullName>
    <label>For activity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>