force-app/main/default/objects/Payment_of_wages__c/fields/Number_of_units__c.field-meta.xml
<CustomField>
    <fullName>Number_of_units__c</fullName>
    <label>Number of units</label>
    <length>255</length>
    <type>Text</type>
</CustomField>