force-app/main/default/objects/Payment_of_wages__c/fields/Other_unit__c.field-meta.xml
<CustomField>
    <fullName>Other_unit__c</fullName>
    <label>Other unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>