force-app/main/default/objects/Payment_of_wages__c/fields/Paid_amount__c.field-meta.xml
<CustomField>
    <fullName>Paid_amount__c</fullName>
    <label>Paid amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>