force-app/main/default/objects/Payment_of_wages__c/fields/Payment_type__c.field-meta.xml
<CustomField>
    <fullName>Payment_type__c</fullName>
    <label>Payment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>One hourly rate</fullName>
            </value>
            <value>
                <fullName>Multiple hourly rate</fullName>
            </value>
            <value>
                <fullName>Salary rate</fullName>
            </value>
            <value>
                <fullName>Commission rate</fullName>
            </value>
            <value>
                <fullName>Piece rate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>