force-app/main/default/objects/Payment_of_wages__c/fields/Per_period__c.field-meta.xml
<CustomField>
    <fullName>Per_period__c</fullName>
    <label>Per period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hour</fullName>
            </value>
            <value>
                <fullName>Day</fullName>
            </value>
            <value>
                <fullName>Week</fullName>
            </value>
            <value>
                <fullName>Bi-weekly (every 2 weeks)</fullName>
            </value>
            <value>
                <fullName>Semi-Monthly (twice a month)</fullName>
            </value>
            <value>
                <fullName>Monthly</fullName>
            </value>
            <value>
                <fullName>Annual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>