force-app/main/default/objects/Payment_of_wages__c/fields/Per_unit__c.field-meta.xml
<CustomField>
    <fullName>Per_unit__c</fullName>
    <label>Per unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mile</fullName>
            </value>
            <value>
                <fullName>Bin</fullName>
            </value>
            <value>
                <fullName>Square</fullName>
            </value>
            <value>
                <fullName>Foot</fullName>
            </value>
            <value>
                <fullName>Yard</fullName>
            </value>
            <value>
                <fullName>Piece</fullName>
            </value>
            <value>
                <fullName>Pound</fullName>
            </value>
            <value>
                <fullName>Bunch</fullName>
            </value>
            <value>
                <fullName>Bucket</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>