force-app/main/default/objects/Payment_of_wages__c/fields/Received_written_commission_aggreement__c.field-meta.xml
<CustomField>
    <fullName>Received_written_commission_aggreement__c</fullName>
    <description>Did you receive a written commission agreement?</description>
    <label>Received written commission aggreement?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>