force-app/main/default/objects/Payment_of_wages__c/fields/Total_paid__c.field-meta.xml
<CustomField>
    <fullName>Total_paid__c</fullName>
    <label>Total paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>